# doughbot

./: .gitignore  README.md  pyproject.toml
doughbot/: __init__.py  bot.py  bot_helpers.py  run_bot.py
tests/: test_doughbot.py
